kubernetes/apps/o11y/grafana-operator/instance/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "grafana.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
